Thu Mar 29 10:35:45 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c, src/eval.c, src/funclib.c, lib/*/*.gel: fix some
	  spelling and capitalization

	* help/C/gel-function-list.xml: fix spelling

	* combinatorics/recursive_sequences.gel: Fix LinearRecursiveSequence,
	  and also allow it to take matrix argument

	* src/geniustests.txt: add a few tests

	* help/C/*.xml: Fixes from Luc Pionchon that I totally forgot about
	  for 1.0.15

Wed Mar 28 17:08:55 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: fix possible uninitialized use when reading 
	  the compiled library (though it's code that never gets hit
	  unless the installed library gets corrupted)

	* NEWS: fix typos

Wed Mar 28 15:57:41 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: when running help and things are not documented and not
	  defined, don't output three lines saying so, just the one error will
	  do.

Tue Mar 27 22:56:49 2012  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.15

Thu Mar 22 11:25:49 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: remove some redundant code, load the exp for
	  matrices lazily

Wed Mar 21 15:39:04 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/*.[ch]: mark a bunch of functions as pure.  Probably doesn't
	  help with optimization, but it might.

Tue Mar 20 13:13:48 2012  Jiri (George) Lebl <jirka@5z.com>

	* help/*/figures/*.eps: remove .eps figures, there is no need for
	  them and they take up lots of space

	* help/{fr,de}/figures/*.png: quantize and optimize

Tue Mar 20 11:39:45 2012  Jiri (George) Lebl <jirka@5z.com>

	* help/C/gel-function-list.xml, help/C/genius.xml: Add Commutative
	  Algebra section and document the Macaulay stuff (at least stub it).
	  Also add a note to the doc on ceil.

	* src/graphing.c: Fix zooming using pointer for functions that take
	  a long time to draw by moving the zooming code into an idle
	  handler.

	* lib/number_theory/primes.gel: update where GIMPS has gotten in
	  doublechecking
