@@ -1,3 +1,9 @@
+Mon Apr 09 20:44:03 2012  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/eval.c, src/structs.h: Store state of "uninitialized"
+	  with identifier nodes so that we don't double warn of uninitialized
+	  identifiers with something like "x+5"
+
 Thu Mar 29 10:35:45 2012  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/calc.c, src/eval.c, src/funclib.c, lib/*/*.gel: fix some
